--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -593,7 +593,7 @@ select:-webkit-autofill:focus {
 .wrap-content-modal{
 	padding: 100px 20px;
 	overflow: auto;
-	height: 70vh;
+	max-height: 70vh;
 }
 @media only screen and (min-width: $--sm){
 	.wrap-content-modal{
@@ -606,6 +606,7 @@ select:-webkit-autofill:focus {
 @media only screen and (min-width: 1200px) {
 	.signup-modal-container {
 		max-height: 680px;
+		height: auto;
 	}
 }
 @media only screen and (max-width: 1200px) {
