--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -9,6 +9,9 @@
   gap: 5vh;
   min-height: 100vh;
   overflow: hidden;
+  @include lg{
+    gap: 0;
+  }
   input {
     font-size: 16px;
     @include sm{
@@ -39,10 +42,13 @@
       box-shadow: none;
       text-align: left;
       background: transparent;
-      padding: 45px 0 20px;
+      padding: 25px 0 35px;
       img{
-        max-width: 127px;
+        max-width: 150px;
         margin-left: 65px;
+        @include lg{
+          margin-bottom: 0;
+        }
       }
     }
   }
@@ -115,7 +121,6 @@
   }
   &__description{
     color: #333333;
-    max-width: 400px;
     margin: 0 0 24px;
     @include lg{
       margin-bottom: 30px;
@@ -156,6 +161,7 @@
     .showPass{
       top: 15px;
       @include sm{
+        font-size: 15px;
         top: 23px;
       }
     }
