--- a/src/components/step-3.html
+++ b/src/components/step-3.html
@@ -57,8 +57,8 @@
     </div>
 
     <div class="whoflex-agreement">
-        <input type="checkbox" id="agreement" name="agreement" class="whoflex-checkbox">
-        <label for="agreement">
+        <input type="checkbox" id="agreementCheck" name="agreement" class="whoflex-checkbox">
+        <label for="agreementCheck">
             I accept Whoflex's
             <a href="#" class="whoflex-link" target="_blank">Terms of Use</a> and
             <a href="#" class="whoflex-link" target="_blank">Privacy Policy</a>.
