--- a/src/scss/components/accordion.scss
+++ b/src/scss/components/accordion.scss
@@ -120,6 +120,11 @@
           }
         }
       }
+      .whoflex-checkbox:checked+label{
+        &:hover{
+          color: #666666;
+        }
+      }
     }
   }
 }
