--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -180,7 +180,8 @@
       padding: 21px 16px;
     }
     &:focus-visible, &:focus{
-      border: 2px solid #E0C463 !important;
+      border: 1px solid transparent !important;
+      outline:  2px solid #E0C463 !important;
     }
   }
   .helper-text{
