fixed inputFile step 3

--- a/src/scss/arent.scss
+++ b/src/scss/arent.scss
@@ -11,6 +11,7 @@
     align-items: center;
     justify-content: center;
     background-color: #EEEEEE;
+    padding: 0 16px;
   }
   &__wrap{
     max-width: 460px;
