--- a/src/scss/notebook.scss
+++ b/src/scss/notebook.scss
@@ -3,10 +3,23 @@
 .notebook{
   height: 100vh;
   padding: 65px 0;
+  display: flex;
+
+  max-width: 1200px;
+  margin: 0 auto;
   &__wrap{
     max-width: 840px;
     margin: 0 auto;
     padding: 0 20px;
+  }
+  &__search{
+    display: none;
+    @include xxxl{
+      display: flex;
+      flex-direction: column;
+      order: 1;
+      width: 350px;
+    }
   }
   .wrap-textarea{
     margin-bottom: 11px;
@@ -155,5 +168,48 @@
   }
   p{
     margin: 0;
+  }
+}
+.search{
+  background: #fff;
+  border-radius: 10px;
+  padding: 30px 15px 20px;
+  box-shadow: 0 5px 30px rgb(0 0 0 / 10%);
+  &__title{
+    font-size: 16px;
+    font-weight: 700;
+    margin: 0 0 10px;
+    line-height: 1.2;
+  }
+  &__input-wrap{
+    position: relative;
+    border-radius: 5px;
+    overflow: hidden;
+    input{
+      box-sizing: border-box;
+      display: block;
+      width: 100%;
+      height: 46px;
+      font-size: 16px;
+      line-height: 46px;
+      background: #eeeeee;
+      padding: 0 50px 0 15px;
+      border: 0;
+      &::placeholder{
+        color: #999;
+      }
+      &:focus-visible, &:focus{
+        outline: none;
+      }
+    }
+    button{
+      width: 46px;
+      height: 46px;
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+      border: none;
+    }
   }
 }
