--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -349,7 +349,6 @@ button {
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		max-height: 85vh;
 		overflow: hidden;
 	}
 	.whoflex-modal-content{
@@ -510,7 +509,7 @@ textarea {
 		cursor: pointer;
 		display: block;
 		&:hover{
-			text-decoration: underline;
+			font-weight: bold;
 		}
 	}
 }
@@ -605,7 +604,6 @@ textarea {
 /* ######### Sign Up CSS ######### */
 .signup-modal-container {
 	display: flex;
-	//min-height: 640px;
 }
 
 @media only screen and (max-width: $--sm) {
@@ -617,7 +615,12 @@ textarea {
 .wrap-content-modal{
 	padding: 100px 20px;
 	overflow: auto;
-	max-height: 70vh;
+	max-height: 80vh;
+}
+@media only screen and (max-height: 600px){
+	.wrap-content-modal{
+		max-height: calc(100vh - 200px);
+	}
 }
 @media only screen and (min-width: $--sm){
 	.wrap-content-modal{
