--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -26,7 +26,7 @@
       }
     }
     &[type="password"] {
-      font-size: 10px!important;
+      //font-size: 10px!important;
       letter-spacing: 5px;
       min-height: 48.5px;
       @include sm{
