--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,13 +35,15 @@
 input[type="password"] {
 	transition: none;
 	line-height: 1rem;
-	//font-family: "passstar", sans-serif;
+	font-family: "passstar", sans-serif;
 	font-size: 17px !important;
 	letter-spacing: 0.1em;
+	//text-security: square;
+	//-webkit-text-security: square;
 }
 input.fs10{
 	&[type="password"] {
-		//font-size: 10px !important;
+		font-size: 10px !important;
 	}
 }
 input{
