--- a/src/components/step-1.html
+++ b/src/components/step-1.html
@@ -13,8 +13,9 @@
             <span class="mt-8 d-block text-gray helper-text">Your email address will be used for your Whoflex Instructor Account login once your application is accepted.</span>
         </div>
         <div class="instructor-app__wrap-input whoflex-input__wrap">
-            <input class="whoflex-input password" type="password" id="password" placeholder="Password*" onkeyup="checkPassValidation()" required/>
+            <input class="whoflex-input password" type="password" id="password" placeholder="Password*" rel="to-replace" onkeyup="checkPassValidation()" required/>
             <span class="showPass">Show</span>
+
             <span class="mt-8 d-block text-gray helper-text">
                 <span id="passHelpText">Your password must be at least 6 characters.</span>
                 The password will be used for your Whoflex Instructor Account login once your application is accepted.</span>
