--- a/src/scss/notebook.scss
+++ b/src/scss/notebook.scss
@@ -7,6 +7,7 @@
 
   max-width: 1200px;
   margin: 0 auto;
+  gap: 30px;
   &__wrap{
     max-width: 840px;
     width: 100%;
@@ -19,7 +20,8 @@
       display: flex;
       flex-direction: column;
       order: 1;
-      width: 350px;
+      max-width: 350px;
+      width: 100%;
     }
   }
   .wrap-textarea{
