--- a/src/scss/notebook.scss
+++ b/src/scss/notebook.scss
@@ -79,6 +79,7 @@
       }
       @include md{
         line-height: 37px;
+        font-size: 20px;
       }
       &::before{
         right: 28px;
@@ -135,7 +136,6 @@
             path{
               transition: .4s;
               fill: black;
-              stroke: black;
             }
           }
         }
@@ -174,8 +174,6 @@
   align-items: center;
   color: #666666;
   line-height: 31px;
-  padding-bottom: 42px;
-  border-bottom: 1px solid #CCCCCC;
   margin-bottom: 50px;
   font-size: 14px;
   @include sm{
