--- a/src/scss/components/_var.scss
+++ b/src/scss/components/_var.scss
@@ -8,6 +8,7 @@ $xs: 375px;
 $sm: 576px;
 $md: 768px;
 $lg: 992px;
+$l: 1024px;
 $xl: 1200px;
 $xxl: 1400px;
 $xxxl: 1920px;
@@ -28,6 +29,11 @@ $xxxl: 1920px;
 };
 @mixin lg {
   @media (min-width:$lg) {
+    @content
+  }
+};
+@mixin l {
+  @media (min-width:$l) {
     @content
   }
 };
