--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -10,7 +10,6 @@
   }
   a {
     font-family: inherit;
-    color: inherit;
     font-size: inherit;
     outline: none;
     appearance: none;
@@ -34,7 +33,6 @@ body{
   z-index: 100;
 
   background-color: #fff;
-  box-shadow: 0 20px 60px rgb(15 31 54 / 40%);
   max-height: calc(100vh - 100%);
   overflow-x: hidden;
   overflow-y: auto;
@@ -43,12 +41,15 @@ body{
   will-change: transform;
   transform: translateY(4rem);
   transition: all .2s ease-in;
+  @include l{
+    box-shadow: 0 20px 60px rgb(15 31 54 / 40%);
+  }
   &.open{
     opacity: 1;
     visibility: visible;
     pointer-events: all;
     transform: translateY(0);
-    @include lg{
+    @include l{
       .header-nav__wrap{
         min-height: 100vh;
       }
@@ -59,8 +60,9 @@ body{
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  @include lg{
+  @include l{
     display: flex;
+    justify-content: space-between;
     gap: 10px;
   }
   @include xl{
@@ -68,21 +70,21 @@ body{
   }
   &__wrap{
     margin: 0 15px;
-    @include lg{
-      width: calc(100% - 100px);
+    @include l{
+      width: calc(100% - 200px);
       display: flex;
-      gap: 25px;
+      gap: 20px;
       box-shadow: -12px 4px 18px rgba(0, 0, 0, 0.05);
       padding: 26px 20px;
       margin: 0;
     }
     @include xl{
-      width: calc(100% - 200px);
+      gap: 25px;
       padding: 26px 90px;
     }
     svg{
       transform: scale(.85);
-      @include lg{
+      @include l{
         transform: scale(1);
       }
       @include xl{
@@ -107,11 +109,17 @@ body{
     border-radius: 10px;
     padding: 25px;
     margin-bottom: 20px;
-    @include lg{
+    @include l{
       margin-bottom: 0;
       padding: 0;
       width: 33%;
       background-color: #fff;
+    }
+    &:first-child{
+      margin-top: 20px;
+      @include l{
+        margin-top: 0;
+      }
     }
     &:last-child{
       margin-bottom: 0;
@@ -132,8 +140,11 @@ body{
     font-weight: 400;
     font-size: 16px;
     line-height: 40px;
-    color: #666666;
+    color: #333333;
     transition: .3s;
+    @include l{
+      color: #666666;
+    }
     &:hover{
       color: $accentColor;
     }
@@ -147,7 +158,7 @@ body{
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 12px;
-    @include lg{
+    @include l{
       padding-bottom: 20px;
       margin-bottom: 18px;
       border-bottom: 1px solid #cccccc;
@@ -156,10 +167,11 @@ body{
   &__label-text{
     font-family: 'Arial', serif;
     font-weight: 700;
+    font-size: 20px;
   }
   &__label-icon{
     display: none;
-    @include lg{
+    @include l{
       display: block;
       margin-right: 10px;
     }
@@ -169,7 +181,7 @@ body{
     margin-top: 80px;
     color: #000000;
     text-decoration: none;
-    @include lg{
+    @include l{
       display: block;
     }
     &:hover{
@@ -218,7 +230,10 @@ body{
     width: 0;
     height: 0;
   }
-  @include lg{
+  @include md{
+    justify-content: center;
+  }
+  @include l{
     border: none;
     display: block;
     margin: 0;
@@ -229,9 +244,10 @@ body{
     align-items: center;
     cursor: pointer;
     font-size: 15px;
-    color: #000;
+    color: #000000;
     padding: 10px 0;
-    @include lg{
+    @include l{
+      color: #666666;
       transition: .3s;
       margin-bottom: 30px;
       padding: 0;
@@ -247,14 +263,26 @@ body{
     &.active{
       font-weight: 700;
       border-bottom: 2px solid #E0C461;
-      @include lg{
+      @include l{
         font-weight: 400;
         border: none;
       }
     }
+    path{
+      fill: #000000;
+      @include l{
+        fill: #666666;
+      }
+    }
   }
   svg{
-    margin-right: 12px;
+    width: auto;
+    height: auto;
+    transform: scale(.8);
+    margin-right: 4px;
+    @include l{
+      margin-right: 12px;
+    }
   }
   path{
     transition: .3s;
@@ -264,8 +292,8 @@ body{
 
 ////// burger button
 .hamburger-lines {
-  height: 26px;
-  width: 32px;
+  height: 16px;
+  width: 20px;
   position: absolute;
   top: 17px;
   right: 20px;
@@ -276,14 +304,14 @@ body{
   padding: 0;
   background-color: transparent;
   border: none;
-  @include lg{
+  @include l{
     right: auto;
     left: 200px;
     top: 25px;
   }
   .line {
     display: block;
-    height: 4px;
+    height: 2px;
     width: 100%;
     border-radius: 10px;
     background: #0e2431;
@@ -315,7 +343,7 @@ body{
 
 ///////// added style
 .m_profile_box, .m_search_box{
-  @include lg{
+  @include l{
     display: none;
   }
 }
@@ -327,7 +355,7 @@ body{
   padding: 0 20px;
 }
 .m_nav_logo_box .nav_logo {
-  @include lg{
+  @include l{
     margin: 0;
     width: 145px;
     padding: 20px 0;
@@ -389,6 +417,9 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    a{
+      color: #333333;
+    }
   }
   .m_profile_box .m_prof_txt_box .welcome_txt {
     font-size: 16px;
@@ -399,8 +430,11 @@ body{
     line-height: 1;
     color: #111;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 17px;
     margin: 0;
+    @include sm{
+      font-size: 20px;
+    }
   }
   .m_profile_box .m_prof_txt_box .name_txt span {
     margin-left: 12px;
@@ -412,12 +446,18 @@ body{
     border-radius: 11.67px;
     background: #e0c461;
     border: 1px solid #e0c461;
-    font-size: 14px;
+    font-size: 12px;
     color: #fff;
     font-weight: 400;
+    @include sm{
+      font-size: 14px;
+    }
+    a{
+      color: #fff;
+    }
   }
   .m_nav_top_box {
-    padding: 15px 15px 18px;
+    padding: 15px 15px 25px;
     width: 100%;
   }
   .m_nav_logo_box {
@@ -454,6 +494,14 @@ body{
     border: 1px solid #dddddd;
     background: #f5f5f5;
     font-size: 14px;
+    &:focus-visible, &:focus{
+      outline: none;
+      border: 1px solid #dddddd;
+    }
+  }
+  .common_input:focus {
+    border: 2px solid #e0c463;
+    box-shadow: 0 7px 20px rgb(224 196 99 / 10%);
   }
   .m_nav_top_box .m_search_img_box {
     position: absolute;
