--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -71,7 +71,7 @@ body{
   &__wrap{
     margin: 0 15px;
     @include l{
-      width: calc(100% - 200px);
+      width: calc(100% - 180px);
       display: flex;
       gap: 20px;
       box-shadow: -12px 4px 18px rgba(0, 0, 0, 0.05);
@@ -79,6 +79,7 @@ body{
       margin: 0;
     }
     @include xl{
+      width: calc(100% - 200px);
       gap: 25px;
       padding: 26px 90px;
     }
@@ -115,12 +116,6 @@ body{
       width: 33%;
       background-color: #fff;
     }
-    &:first-child{
-      margin-top: 20px;
-      @include l{
-        margin-top: 0;
-      }
-    }
     &:last-child{
       margin-bottom: 0;
     }
@@ -139,9 +134,10 @@ body{
     text-decoration: none;
     font-weight: 400;
     font-size: 16px;
-    line-height: 40px;
+    //line-height: 40px;
     color: #333333;
     transition: .3s;
+    margin-bottom: 25px;
     @include l{
       color: #666666;
     }
@@ -223,7 +219,7 @@ body{
   display: flex;
   gap: 20px;
   overflow: auto;
-  margin: 20px 0;
+  margin: 0 0 20px !important;
   padding: 0 20px !important;
   border-bottom: 1px solid #EDEDED;
   &::-webkit-scrollbar {
@@ -435,9 +431,19 @@ body{
     @include sm{
       font-size: 20px;
     }
+    a{
+      margin-right: 10px;
+      margin-bottom: 10px;
+      display: block;
+      @include xs{
+        display: inline-block;
+        margin: 0;
+
+      }
+    }
   }
   .m_profile_box .m_prof_txt_box .name_txt span {
-    margin-left: 12px;
+
     display: inline-block;
     width: 106px;
     height: 25px;
@@ -449,6 +455,9 @@ body{
     font-size: 12px;
     color: #fff;
     font-weight: 400;
+    @include xs{
+      margin-left: 12px;
+    }
     @include sm{
       font-size: 14px;
     }
