--- a/src/scss/notebook.scss
+++ b/src/scss/notebook.scss
@@ -27,6 +27,13 @@
   .wrap-textarea{
     margin-bottom: 11px;
     position: relative;
+    border: none !important;
+    outline: 1px solid black;
+  }
+  .whoflex-textarea:focus{
+    .wrap-textarea{
+      outline: 1px solid red;
+    }
   }
   .comment{
     position: absolute;
@@ -41,6 +48,15 @@
     text-transform: none;
     bottom: 10px;
     right: 10px;
+  }
+  .arent__text{
+    color: #000000;
+  }
+  .whoflex-textarea{
+    padding: 20px;
+    &::placeholder{
+      font-size: 18px;
+    }
   }
   .accordion{
     max-width: none;
@@ -225,4 +241,80 @@
       border: none;
     }
   }
+}
+
+
+
+
+
+.reply_textarea.reply_textarea_big {
+  border: 1px solid #e1e1e1;
+  background: #fff;
+  overflow: hidden;
+  transition: border-color 0.3s;
+  position: relative;
+  padding: 10px 0 0;
+  max-width: 840px;
+  margin: 0 auto 50px;
+  border-radius: 5px;
+}
+.reply_textarea.focus {
+  border-color: #e0c463;
+  border-width: 2px;
+  box-shadow: 0 7px 20px rgb(224 196 99 / 10%);
+}
+.reply_textarea.reply_textarea_big textarea {
+  min-height: 75px;
+  display: block;
+  width: calc(100% - 10px);
+  line-height: 1.6;
+
+  font-size: 15px;
+  border-radius: 5px;
+  padding: 0 15px;
+  transition: height 0.3s;
+  border: 0;
+  color: #111;
+  &:focus{
+    outline: none;
+    min-height: 65px;
+    margin: 0 0 10px;
+    border: 0;
+  }
+  &::placeholder{
+    font-family: 'Arial', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+  }
+}
+
+.button_reply_wrap {
+  display: none;
+  height: 40px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  background: #fff;
+  text-align: right;
+}
+.button_reply {
+  display: inline-block;
+  width: 78px;
+  height: 32px;
+  line-height: 32px;
+  font-size: 14px;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  background: #e0c465;
+  border: none;
+  transition: .4s;
+  &:hover{
+    background: black;
+  }
+}
+.reply_textarea textarea:focus + .button_reply_wrap {
+  display: block;
+}
+.reply_textarea.reply_textarea_big .button_reply_wrap {
+  border-radius: 10px;
 }
