fixed text notebook acc

--- a/src/scss/notebook.scss
+++ b/src/scss/notebook.scss
@@ -166,12 +166,11 @@
       border-radius: 10px;
     }
     &__notebook-text{
-      max-width: 570px;
       font-weight: 400;
       font-size: 14px;
       line-height: 22px;
       color: #666;
-      margin: 0 0 0 35px;
+      margin: 0 15px 0 35px;
       overflow-wrap: anywhere;
 
       overflow: auto;
