--- a/src/scss/notebook.scss
+++ b/src/scss/notebook.scss
@@ -51,6 +51,7 @@
     margin-bottom: 0;
   }
   .whoflex-textarea{
+    font-family: 'Arial', serif;
     @include lg{
       padding: 20px;
       font-size: 17px;
