--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -31,6 +31,7 @@ body{
   left: 0;
   right: 0;
   z-index: 100;
+  height: 0;
 
   background-color: #fff;
   max-height: calc(100vh - 100%);
@@ -45,6 +46,7 @@ body{
     box-shadow: 0 20px 60px rgb(15 31 54 / 40%);
   }
   &.open{
+    height: auto;
     opacity: 1;
     visibility: visible;
     pointer-events: all;
