--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -168,9 +168,10 @@ body{
     }
     &.show-all{
       color: black;
-      text-decoration: underline;
+      font-size: 18px;
+      font-weight: bold;
       &:hover{
-        font-weight: bold;
+        text-decoration: underline;
       }
     }
   }
@@ -252,6 +253,11 @@ body{
   }
   &__banner-prev{
     color: #000000;
+    @include lg{
+      span{
+        display: block;
+      }
+    }
     &:hover{
       text-decoration: underline;
     }
@@ -263,34 +269,40 @@ body{
     max-height: 500px;
     display: block;
     position: relative;
-    &::after{
-      transition: .4s;
-      z-index: 1;
-      position: absolute;
-      opacity: 0;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-
-      content: "View more";
-      letter-spacing: -.02em;
-      color: #fff;
-      padding: 15px 30px;
-      min-width: 80px;
-      border: 1px solid #fff;
-      border-radius: 100rem;
-      text-align: center;
-    }
-    &::before{
-      transition: .4s;
-      z-index: 1;
-      position: absolute;
-      content: "";
+    width: 90%;
+    @include lg{
       width: 100%;
-      height: 100%;
-      background: rgba(#000, .4);
-      opacity: 0;
+      &::after{
+        transition: .4s;
+        z-index: 1;
+        position: absolute;
+        opacity: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        font-size: .85em;
+
+        content: "View more";
+        letter-spacing: -.02em;
+        color: #fff;
+        padding: 12px 23px;
+        min-width: 80px;
+        border: 1px solid #fff;
+        border-radius: 100rem;
+        text-align: center;
+      }
+      &::before{
+        transition: .4s;
+        z-index: 1;
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: rgba(#000, .4);
+        opacity: 0;
+      }
     }
+
     &:hover{
       &::before, &::after{
         opacity: 1;
