--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -253,7 +253,7 @@ body{
   }
   &__banner-prev{
     color: #000000;
-    @include lg{
+    @include l{
       span{
         display: block;
       }
@@ -270,7 +270,7 @@ body{
     display: block;
     position: relative;
     width: 90%;
-    @include lg{
+    @include l{
       width: 100%;
       &::after{
         transition: .4s;
@@ -401,30 +401,41 @@ body{
 
 ////// burger button
 .hamburger-lines {
-  height: 16px;
-  width: 20px;
+  height: 30px;
+  width: 30px;
   position: absolute;
-  top: 17px;
+  top: 12px;
   right: 20px;
   z-index: 2;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 0;
-  background-color: transparent;
+  justify-content: center;
+  gap: 2.3px;
   border: none;
   cursor: pointer;
+  background-color: #343434;
+  border-radius: 50%;
   @include l{
+    gap: 4.4px;
+    height: 43px;
+    width: 43px;
     right: auto;
     left: 200px;
-    top: 30px;
+    top: 17px;
+    padding: 0 11px;
   }
   .line {
     display: block;
-    height: 2px;
-    width: 100%;
+    height: 2.5px;
+    width: 15px;
     border-radius: 10px;
-    background: #0e2431;
+    background: #fff;
+    transition: .4s;
+    margin: 0 auto;
+    @include l{
+      width: 20px;
+      margin: 0;
+    }
   }
   .line1 {
     transform-origin: 0 0;
@@ -432,12 +443,23 @@ body{
   }
   .line2 {
     transition: transform 0.2s ease-in-out;
+    @include l{
+      width: 15px;
+      margin: 0 auto;
+    }
   }
   .line3 {
     transform-origin: 0 100%;
     transition: transform 0.4s ease-in-out;
   }
   &.open{
+    .line{
+      position: relative;
+      left: 3px;
+      @include l{
+        left: 4px;
+      }
+    }
     .line1 {
       transform: rotate(45deg);
     }
@@ -589,7 +611,7 @@ body{
     width: 100%;
   }
   .m_nav_logo_box {
-    padding: 15px 15px 0;
+    padding: 15px 15px 1px;
     width: 100%;
     display: flex;
     justify-content: space-between;
