--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -207,9 +207,10 @@ body{
     }
   }
   &__wrap-banner{
-    filter: drop-shadow(0px 4px 18px rgba(0, 0, 0, 0.15));
+    filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.15));
     margin-bottom: 40px;
     @include l{
+      filter: drop-shadow(0px 4px 18px rgba(0, 0, 0, 0.15));
       margin-top: 80px;
       margin-bottom: 0;
     }
@@ -505,7 +506,7 @@ body{
   .m_profile_box {
     padding: 20px 15px 16px;
     width: 100%;
-    box-shadow: 0px 2px 10px rgb(0 0 0 / 10%);
+    box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
     border-radius: 10px;
     display: flex;
   }
