--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -209,7 +209,9 @@ body{
   &__wrap-banner{
     filter: drop-shadow(0px 4px 6px rgba(0, 0, 0, 0.15));
     margin-bottom: 40px;
+    width: 90%;
     @include l{
+      width: 100%;
       margin-top: 80px;
       margin-bottom: 0;
       filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.15));
@@ -254,13 +256,15 @@ body{
   }
   &__banner-prev{
     color: #000000;
+    @include md{
+      &:hover{
+        text-decoration: underline;
+      }
+    }
     @include l{
       span{
         display: block;
       }
-    }
-    &:hover{
-      text-decoration: underline;
     }
   }
   &__wrap-img{
@@ -270,7 +274,6 @@ body{
     max-height: 500px;
     display: block;
     position: relative;
-    width: 90%;
     @include l{
       width: 100%;
       &::after{
