--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -205,6 +205,7 @@
   border: 1px solid #e7e7e7;
   border-radius: 7px;
   overflow-y: auto;
+  margin-top: 2px;
 
   &.active {
     display: block;
