--- a/src/scss/components/instructor-app.scss
+++ b/src/scss/components/instructor-app.scss
@@ -211,6 +211,7 @@
   width: 100%;
   background: #fff;
   border: 1px solid #e7e7e7;
+  border-bottom: none;
   border-radius: 7px;
   overflow-y: auto;
   z-index: 1;
@@ -222,14 +223,11 @@
   span {
     display: block;
     padding: 10px 20px;
+    border-bottom: 1px solid #e7e7e7;
 
     &:hover {
       cursor: pointer;
       background: #f5f5f5;
-    }
-
-    &:not(:last-child) {
-      border-bottom: 1px solid #e7e7e7;
     }
   }
 }
